--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ethers": "^5.5.3",
     "fs-extra": "^10.0.1",
     "ganache": "^7.4.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solc": "0.8.7-fixed",
     "ts-node": "^10.7.0",
     "typescript": "^4.7.4"
